fix textblock alignings

--- a/src/styles/partials/buttons.pcss
+++ b/src/styles/partials/buttons.pcss
@@ -23,4 +23,8 @@
   &.is__alt {
     margin: 0;
   }
+
+  .textBlock-content.is__alt & {
+    margin-bottom: auto;
+  }
 }
