--- a/src/styles/partials/textBlock/features.pcss
+++ b/src/styles/partials/textBlock/features.pcss
@@ -1,6 +1,7 @@
 .features-wrapper {
   display: flex;
   align-items: center;
+  margin-bottom: 65px;
 
   &.is__academy {
     justify-content: center;
