--- a/src/styles/partials/textBlock/textBlock.pcss
+++ b/src/styles/partials/textBlock/textBlock.pcss
@@ -8,16 +8,20 @@
   font: $font-altTitle;
   position: absolute;
   margin: 0;
+  margin-bottom: 65px;
   top: 40px;
   left: $margin-holder;
   padding: 0;
   color: $color-altTitle;
   text-transform: uppercase;
 
+  .textBlock-content.is__alt & {
+    margin-bottom: auto;
+  }
+
   .textBlock-wrapper.is__alt  & {
     color: $color-black;
     position: static;
-    margin-bottom: 65px;
   }
 }
 
@@ -39,9 +43,12 @@
   width: 50%;
   padding: 70px 60px 70px 90px;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+
+  &.is__alt {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
   .textBlock-wrapper.is__alt  & {
     padding-top: 40px;
@@ -55,7 +62,7 @@
   width: 80%;
   font: $font-title;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .textBlock-description {
@@ -63,5 +70,9 @@
   padding: 0;
   color: $color-greyText;
   font: $font-descr;
-  padding-bottom: 70px;
+  margin-bottom: 50px;
+
+  &:last-of-type {
+    margin-bottom: 65px;
+  }
 }
